--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "formik": "^2.4.6",
+    "formik-mui": "^5.0.0-alpha.1",
+    "formik-mui-x-date-pickers": "^2.0.0-alpha.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
